--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     
     <body>
        <img class="central-image" src=".\images\Foto-hero.png">
-       <h2>Consultores tecnològicos</h2>
+       <h2>Consultores tecnològicos más Andrés</h2>
+       <h1>Total</h1>
     </body>
 
 </html>
