--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
        <img class="central-image" src=".\images\Foto-hero.png">
        <h2>Consultores tecnològicos más Andrés</h2>
        <h1>Total</h1>
+       <P>kaos més que total</P>
     </body>
 
 </html>
