--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
        <img class="central-image" src=".\images\Foto-hero.png">
        <h2>Consultores tecnològicos más Andrés</h2>
        <h1>Total</h1>
-       <P>kaos més que total</P>
+       <h2><P>kaos més que total</P></h2>
     </body>
 
 </html>
