--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <head>
        <meta charset="utf-8">
        <title>StartUp 4ForYou</title>
-       <link rel="startupcss" href="startupcss.css">
+       <link rel="stylecss" href="startupcss.css">
     </head>
     
     <body>
-       <img class="central-image" src=".\images\Foto-hero.png">
-       <h2>Consultores tecnològicos más Andrés</h2>
-       <h1>Total</h1>
-       <h2><P>kaos més que total</P></h2>
+       <img class="imagen-central" src=".\images\Foto-hero.png">
+       <h2 class="frase-principal">Consultores tecnològicos</h2>
+       <h3 class="frase-secundaria">Especialistas en desarrollo web</h3>
+       <button class="boton-llamamos">Te llamamos</button>
     </body>
 
 </html>
