--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
-
-<html>
-   
+   <html lang="es">
     <head>
        <meta charset="utf-8">
        <title>StartUp 4ForYou</title>
-       <link rel="stylecss" href="startupcss.css">
+       <link rel="stylesheet" href="./startupcss.css">
     </head>
     
     <body>
+      <header id="capçelera">
+                
+         <a id="titol-capçelera" href="#">
+             <H2><span class="titol">4ForYou</span></H2>
+         </a> <!-- / #Titol-capçelera -->
+ 
+         <nav>
+             <ul>
+                 <li><a href="#">Somos</a></li>
+                 <li><a href="#">Equipo</a></li>
+                 <li><a href="#">Contactenos</a></li>
+             </ul>
+         </nav><!-- / nav -->
+ 
+     </header><!-- / #cos-capçelera -->
        <img class="imagen-central" src=".\images\Foto-hero.png">
        <h2 class="frase-principal">Consultores tecnològicos</h2>
        <h3 class="frase-secundaria">Especialistas en desarrollo web</h3>
