--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     </head>
     
     <body>
-      <header id="capçelera">
+      <header id="capçalera">
                 
-         <a id="titol-capçelera" href="#">
-             <H2><span class="titol">4ForYou</span></H2>
-         </a> <!-- / #Titol-capçelera -->
+         <a id="titol-capçalera" href="#">
+             <h1 class="titol">4ForYou</h1>
+         </a> <!-- / #Titol-capçalera -->
  
          <nav>
              <ul>
@@ -19,14 +19,15 @@
                  <li><a href="#">Equipo</a></li>
                  <li><a href="#">Contactenos</a></li>
              </ul>
-         </nav><!-- / nav -->
+         </nav> <!-- / barra de navegació -->
  
-     </header><!-- / #cos-capçelera -->
+     </header><!-- / #cos-capçalera -->
        <img class="imagen-central" src=".\images\Foto-hero.png">
        <h2 class="frase-principal">Consultores tecnològicos</h2>
        <h3 class="frase-secundaria">Especialistas en desarrollo web</h3>
        <button class="boton-llamamos">Te llamamos</button>
-<!-- Parte final de las personas-->
+
+   <!-- Parte final de las personas-->
    }
        <div>
          <table class="tabla-personas">
