--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
          </nav> <!-- / barra de navegació -->
  
      </header><!-- / #cos-capçalera -->
-       <img class="imagen-central" src=".\images\Foto-hero.png">
-       <h2 class="frase-principal">Consultores tecnològicos</h2>
-       <h3 class="frase-secundaria">Especialistas en desarrollo web</h3>
-       <button class="boton-llamamos">Te llamamos</button>
-
+     <div class="box-central">
+        <img class="imagen-central" src=".\images\Foto-hero.png">
+        <h2 class="frase-principal">Consultores tecnológicos</h2>
+        <h3 class="frase-secundaria">Especialistas en desarrollo web</h3>
+        <button class="boton-llamamos">Te llamamos</button>
+     </div>
    <!-- Parte final de las personas-->
-   }
+
        <div>
          <table class="tabla-personas">
          <td>
