--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
       <header id="capçalera">
                 
          <a id="titol-capçalera" href="#">
-             <h1 class="titol">4ForYou</h1>
+             <h1 class="titol"><FONT SIZE=6>4For<span style="color:#ffca41">You</span></FONT></h1>
          </a> <!-- / #Titol-capçalera -->
  
          <nav>
              <ul>
-                 <li><a href="#">Somos</a></li>
+                 <FONT SIZE=4><li><a href="#">Somos</a></li>
                  <li><a href="#">Equipo</a></li>
-                 <li><a href="#">Contactenos</a></li>
+                 <button class="button"a href="#"><FONT SIZE=4><li>Contáctenos</a></li></FONT></button>
+                </FONT>
              </ul>
          </nav> <!-- / barra de navegació -->
 
