--- a/Pedro.html
+++ b/Pedro.html
@@ -22,9 +22,9 @@
 
             </header><!-- / #cos-capçalera -->
         
-            <div class="box-central">
+            <div class="box-centralj">
                 <di>
-                    <img class="imagen-central" src="./images/pedrogonzalez.png">
+                    <img class="imagen-centralj" src="./images/pedrogonzalez.png">
                 </di>
                 <div class="info-empleado">
                 <h2 class="frase-principal">Consultor tecnológico</h2>
