--- a/Pedro.html
+++ b/Pedro.html
@@ -9,7 +9,7 @@
         <body>
             <header id="capçalera">
                 <a id="titol-capçalera" href="#">
-                <h1 class="titol">4ForYou</h1>
+                <h1 class="titol">4For<span>You</span></h1>
                 </a> <!-- / #Titol-capçalera -->
  
                 <nav>
