maria page & back to index functionality

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
             </div>
        
             <div>  
-                <img class="foto-perfil" src="./images/mariaperez.png" alt="Imagen de Maria Perez">
+                <a href="./maria.html">
+                    <img class="foto-perfil" src="./images/mariaperez.png" alt="Imagen de Maria Perez">
+                </a>
                 <p class="nombres">Maria Perez</p> 
                 <p class="cargo">Especialistas en desarrollo Web</p>
                 <img class="logo" src="./images/logolinkedin.png" alt="Logotipo de linkedin">
