--- a/Pedro.html
+++ b/Pedro.html
@@ -2,13 +2,15 @@
     <html lang="es">
         <head>
             <meta charset="utf-8">
-            <title>StartUp 4ForYou</title>
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>StartUp-4ForYou</title>
             <link rel="stylesheet" href="./startupcss.css">
         </head>
     
         <body>
             <header id="capçalera">
-                <a id="titol-capçalera" href="#">
+                <a id="titol-capçalera" href="./index.html">
                 <h1 class="titol">4For<span>You</span></h1>
                 </a> <!-- / #Titol-capçalera -->
  
@@ -23,12 +25,13 @@
             </header><!-- / #cos-capçalera -->
         
             <div class="box-centralj">
-                <di>
+                <div>
                     <img class="imagen-centralj" src="./images/pedrogonzalez.png">
-                </di>
-                <div class="info-empleado">
-                <h2 class="frase-principal">Consultor tecnológico</h2>
-                <h3 class="frase-secundaria">Especialista en desarrollo web</h3>
+                </div>
+                <div class="contenedor-frases">
+                    <h2 class="frase-principal">Consultor tecnológico</h2>
+                    <h3 class="frase-secundaria">Especialista en desarrollo web</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 <button class="boton-llamamos">Te llamamos</button>
                 </div>
             </div>
